--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "dependencies": {
     "bulma": "^0.5.3",
     "isomorphic-fetch": "^2.2.1",
+    "leaflet": "^1.2.0",
+    "leaflet-basemaps": "^0.2.2",
+    "leaflet-geonames": "^0.4.2",
+    "leaflet-omnivore": "^0.3.4",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
