--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-tooltip": "^3.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
