--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "browserify": "^14.4.0",
     "bulma": "^0.6.0",
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
