--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "leaflet-omnivore": "^0.3.4",
     "leaflet-range": "^0.1.4",
     "leaflet-zoombox": "^0.3.5",
+    "lethargy": "^1.0.4",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
