--- a/javascript/package.json
+++ b/javascript/package.json
@@ -21,6 +21,7 @@
     "leaflet-omnivore": "^0.3.4",
     "leaflet-range": "^0.1.5",
     "leaflet-zoombox": "^0.5.1",
+    "leaflet.vectorgrid": "^1.3.0",
     "lethargy": "^1.0.4",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -29,6 +30,7 @@
     "react-tooltip": "^3.5.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "shpjs": "^3.4.2",
     "uuid": "^3.2.1"
   }
 }
