--- a/javascript/package.json
+++ b/javascript/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/consbio/seedsource-core",
   "dependencies": {
     "bulma": "^0.6.2",
+    "bulma-checkradio": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.3.1",
     "leaflet-basemaps": "^0.3.1",
