--- a/javascript/package.json
+++ b/javascript/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.6.2",
     "bulma-checkradio": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "jison": "^0.4.18",
     "leaflet": "^1.3.1",
     "leaflet-basemaps": "^0.3.1",
     "leaflet-geonames": "^0.4.4",
