--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ djangorestframework = "~3.7"
 GDAL = "*"
 geopy = "^1.23.0"
 mercantile = "^1.1.6"
-ncdjango = { git = "https://github.com/consbio/ncdjango.git", branch = "main" }
+ncdjango = "^1.1.1"
 netCDF4 = "^1.5.5"
 progress = "^1.5"
 python-pptx = "^0.6.18"
