--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ aiohttp = "^3.7.3"
 trefoil = { git = "https://github.com/consbio/trefoil.git", branch = "main" }
 Django = "^2.2"
 djangorestframework = "~3.7"
-GDAL = "*"
+GDAL = { version = "*", optional = true }
 geopy = "^1.23.0"
 mercantile = "^1.1.6"
-ncdjango = "^1.1.1"
+ncdjango = "^1.2.0"
 netCDF4 = "^1.5.5"
 progress = "^1.5"
 python-pptx = "^0.6.18"
