--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ mercantile = "^1.1.6"
 ncdjango = "^1.3.6"
 netCDF4 = "^1.5.5"
 progress = "^1.5"
-python-pptx = "^0.6.18"
+python-pptx = ">=0.6.18,<0.6.20"
 WeasyPrint = "^52.2"
 django-waffle = "^2.2"
 celery = "^5.2.3"
