--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ WeasyPrint = "^52.2"
 django-waffle = "^2.2"
 celery = "^5.2.3"
 pyproj = "~3.0.0"
+django-url-filter = "^0.3.15"
 
 [tool.poetry.dev-dependencies]
 
