--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Conservation Biology Institute"]
 license = "BSD-3-Clause"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = ">=3.9,<3.11"
 aiohttp = "^3.7.3"
 trefoil = { git = "https://github.com/consbio/trefoil.git", branch = "main" }
 Django = "^3.2"
@@ -21,7 +21,7 @@ python-pptx = "^0.6.21"
 WeasyPrint = "^52.2"
 django-waffle = "^2.2"
 celery = "^5.2.3"
-pyproj = "~3.0.0"
+pyproj = "^3.6.1"
 django-url-filter = "^0.3.15"
 
 [tool.poetry.dev-dependencies]
